crates/rome_formatter/tests/specs/prettier/js/comments/html-like/comment.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: comment.js

---
# Input
```js
<!--
alert(1)
-->
```

# Output
```js
<!--
alert(1)
-->

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ comment.js:1:1
  │  
1 │ ┌ <!--
2 │ │ alert(1)
  │ └────────^ TypeScript only syntax

error[SyntaxError]: expected an identifier, or a member expression but instead found '>'
  ┌─ comment.js:3:3
  │
3 │ -->
  │   ^ Expected an identifier, or a member expression here

error[SyntaxError]: expected an expression but instead found ''
  ┌─ comment.js:3:4
  │
3 │ -->
  │    ^ Expected an expression here


```


